--- a/styles/simple.css
+++ b/styles/simple.css
@@ -6,8 +6,7 @@
   /* Sheet Tabs */
   /* Items List */
   /* Attributes */
-  font-family: AtlantisRegular;
-  ;
+  /*font-family: AtlantisRegular;*/
 }
 .worldbuilding .window-content {
   height: 100%;
