Add Dialog box for rolls part 1

--- a/templates/chat/meleeattack-dialog.html
+++ b/templates/chat/meleeattack-dialog.html
@@ -8,8 +8,12 @@
     <input readonly type="text" name="skillvalue" value="{{skillvalue}}" />
   </div>
   <div class="form-group">
-    <label>{{localize "RQG.Skillvalue"}}</label>
+    <label>{{localize "RQG.Catmodifier"}}</label>
     <input readonly type="text" name="catmodifier" value="{{catmodifier}}" />
+  </div>
+  <div class="form-group">
+    <label>{{localize "RQG.DamageBonus"}}</label>
+    <input type="text" name="damagebonus" value="{{damagebonus}}" />
   </div>
   <div class="form-group">
     <label>{{localize "RQG.Modifier"}}</label>
