--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -62,6 +62,29 @@
                     {{/each}}
                 </div>
             </ol>
+            {{!-- Cults --}}
+            <ol class="skills-list">          
+                <div class="skill-category" data-type="cult">
+                    <li class="item flexrow item-header">
+                        <div class="item-name">{{localize 'RQG.Cult'}}</div>
+                        <div class="item-controls">
+                            <a class="item-control item-create" title="Create item" data-type="cult"><i class="fas fa-plus"></i></a>
+                        </div>
+                    </li>
+                    {{#each actor.cults as |cult id|}}
+                        <li class="item flexrow" data-item-id="{{cult._id}}" data-cultname="{{cult.name}}">
+                            <h4 class="item-name">{{cult.name}}</h4>
+                            <h4 class="item-name">{{cult.data.rank}}</h4>
+                            <h4 class="item-name">{{cult.data.subcult}}</h4>
+                            <h4 class="item-name">{{cult.data.currentrunepoint}} / {{cult.data.maxrunepoint}}</h4>
+                            <div class="item-controls">
+                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                            </div>
+                        </li>
+                    {{/each}}
+                </div>
+            </ol>
             {{!-- Rune Spells --}}
             <ol class="skills-list">          
                 <div class="skill-category" data-spelltype="rune">
@@ -149,10 +172,12 @@
                                 <a class="item-control item-create" title="Create item" data-type="passion"><i class="fas fa-plus"></i></a>
                             </div>
                         </li>
+                        {{log "Passions"}}
                         {{#each actor.passions as |passion id|}}
                             <li class="item flexrow" data-item-id="{{passion._id}}" data-passionname="{{passion.name}}">
+                                {{log passion}}
                                 <h4 class="item-name"><a class="passion-roll">{{passion.name}}</a></h4>
-                                <h4 class="item-name"><a class="passion-roll">{{passion.total}}</a></h4>
+                                <h4 class="item-name"><a class="passion-roll">{{passion.data.total}}</a></h4>
                                 <div class="item-controls">
                                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                                     <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
