--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -8,23 +8,21 @@
             <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></h1>
             <div class="resource">
                 <h3 class="charname">{{localize 'RQG.HP'}}</h3>
-                {{log data.attributes.hitpoints}}
                 <input type="text" name="data.attributes.hitpoints.value" value="{{data.attributes.hitpoints.value}}" data-dtype="Number"/>
                 <span> / </span>
                 <input type="text" name="data.attributes.hitpoints.max" value="{{data.attributes.hitpoints.max}}" data-dtype="Number"/>
             </div>
             <div class="resource">
                 <h3 class="charname">{{localize 'RQG.MP'}}</h3>
-                {{log data.attributes.magicpoints}}
                 <input type="text" name="data.attributes.magicpoints.value" value="{{data.attributes.magicpoints.value}}" data-dtype="Number"/>
                 <span> / </span>
                 <input type="text" name="data.attributes.magicpoints.max" value="{{data.attributes.magicpoints.max}}" data-dtype="Number"/>
             </div>
         </div>
     </header>
-    {{log actor.items}}
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
+        <a class="item" data-tab="summary">{{localize 'RQG.Summary'}}</a>
         <a class="item" data-tab="general">{{localize 'RQG.General'}}</a>
         <a class="item" data-tab="attributes">{{localize 'RQG.Characteristics'}}</a>
         <a class="item" data-tab="skills">{{localize 'RQG.Skills'}}</a>
@@ -32,11 +30,15 @@
         <a class="item" data-tab="magic">{{localize 'RQG.Magic'}}</a>
         <a class="item" data-tab="description">{{localize 'RQG.Description'}}</a>
         <a class="item" data-tab="items">{{localize 'RQG.Items'}}</a>
-        <a class="item" data-tab="flags">{{localize 'RQG.Flags'}}</a>
+        <!-- <a class="item" data-tab="flags">{{localize 'RQG.Flags'}}</a> -->
     </nav>
 
     {{!-- Sheet Body --}}
     <section class="sheet-body">
+        {{!-- Summary Tab --}}
+        <div  class="tab summary"  data-group="primary"  data-tab="summary">
+            {{> "systems/runequest/templates/actor/parts/actor-summary.html"}}
+        </div> 
         {{!-- Magic Tab --}}
         <div  class="tab magic"  data-group="primary"  data-tab="magic">
             {{!-- Spirit Spells --}}
@@ -49,7 +51,6 @@
                         </div>
                     </li>
                     {{#each actor.spells.spirit as |spell id|}}
-                        {{log spell}}
                         <li class="item flexrow" data-item-id="{{spell._id}}" data-spellname="{{spell.name}}">
                             <h4 class="item-name"><a class="spiritspell-roll">{{spell.name}}</a></h4>
                             <h4 class="item-name"><a class="spiritspell-roll">{{spell.data.mpcost}}</a></h4>
@@ -172,10 +173,8 @@
                                 <a class="item-control item-create" title="Create item" data-type="passion"><i class="fas fa-plus"></i></a>
                             </div>
                         </li>
-                        {{log "Passions"}}
                         {{#each actor.passions as |passion id|}}
                             <li class="item flexrow" data-item-id="{{passion._id}}" data-passionname="{{passion.name}}">
-                                {{log passion}}
                                 <h4 class="item-name"><a class="passion-roll">{{passion.name}}</a></h4>
                                 <h4 class="item-name"><a class="passion-roll">{{passion.data.total}}</a></h4>
                                 <div class="item-controls">
@@ -191,148 +190,11 @@
 
         {{!-- Combat Tab --}}
         <div  class="tab combat"  data-group="primary"  data-tab="combat">
-            {{!-- Hit Locations --}}
-            <ol class="skills-list">          
-                <div class="skill-category">
-                    <li class="item flexrow item-header">
-                        <div class="item-name">{{localize "RQG.HitLocations"}}</div>
-                        <div class="item-controls">
-                            <a class="item-control item-create" title="Create item" data-type="hitlocation"><i class="fas fa-plus"></i></a>
-                        </div>
-                    </li>
-                    {{#each actor.hitlocations as |hl id|}}
-                        <li class="item flexrow" data-item-id="{{hl._id}}">
-                            <h4 class="item-name">{{hl.name}}</h4>
-                            <div  class="attribute-editbox">
-                                <input  class="attribute-value"  type="text"  name="hl.data.hp.value"  value="{{hl.data.hp.value}}"  data-dtype="Number"  />                                
-                            </div>
-                            /
-                            <h4 class="item-name">{{hl.data.hp.max}}</h4>
-                            <div  class="attribute-editbox">
-                                <input  class="attribute-value"  type="text"  name="hl.data.armor"  value="{{hl.data.armor}}"  data-dtype="Number"  />
-                            </div>
-                            <div  class="attribute-editbox">
-                                <input  class="attribute-value"  type="text"  name="hl.data.wounds"  value="{{hl.data.wounds}}"  data-dtype="Number"  />
-                            </div>
-                            <h4 class="item-name">{{hl.data.condition}}</h4>
-                            <div class="item-controls">
-                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                            </div>
-                        </li>
-                    {{/each}}
-                </div>
-            </ol>
-            {{!-- Melee Attacks --}}
-            <ol class="skills-list">          
-                <div class="skill-category" data-attacktype="melee">
-                    <li class="item flexrow item-header">
-                        <div class="item-name">{{localize "RQG.MeleeAttacks"}}</div>
-                        <div class="item-controls">
-                            <a class="item-control item-create" title="Create item" data-type="meleeattack"><i class="fas fa-plus"></i></a>
-                        </div>
-                    </li>
-                    {{#each actor.attacks.melee as |attack id|}}
-                        <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
-                            <h4 class="item-name"><a class="meleeattack-roll">{{attack.name}}</a></h4>
-                            <h4 class="item-name">{{attack.data.skillused}}</h4>
-                            <label class="skill-value">{{attack.data.modifier}}</label>
-                            <h4 class="item-name">{{attack.data.damage}}</h4>
-                            <h4 class="item-name">{{attack.data.hpcurrent}} / {{attack.data.hpmax}}</h4>
-                            <div class="item-controls">
-                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                            </div>
-                        </li>
-                    {{/each}}
-                </div>
-            </ol>
-            {{!-- Missile Attacks --}}
-            <ol class="skills-list">          
-                <div class="skill-category" data-attacktype="missile">
-                    <li class="item flexrow item-header">
-                        <div class="item-name">{{localize "RQG.MissileAttacks"}}</div>
-                        <div class="item-controls">
-                            <a class="item-control item-create" title="Create item" data-type="missileattack"><i class="fas fa-plus"></i></a>
-                        </div>
-                    </li>
-                    {{#each actor.attacks.missile as |attack id|}}
-                        <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="missileweapons">
-                            <h4 class="item-name"><a class="missileattack-roll">{{attack.name}}</a></h4>
-                            <h4 class="item-name">{{attack.data.skillused}}</h4>
-                            <label class="skill-value">{{attack.data.modifier}}</label>
-                            <h4 class="item-name">{{attack.data.damage}}</h4>
-                            <h4 class="item-name">{{attack.data.hpcurrent}} / {{attack.data.hpmax}}</h4>
-                            <div class="item-controls">
-                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                            </div>
-                        </li>
-                    {{/each}}
-                </div>
-            </ol>
-            {{!-- Natural Attacks --}}
-            <ol class="skills-list">          
-                <div class="skill-category" data-attacktype="natural">
-                    <li class="item flexrow item-header">
-                        <div class="item-name">{{localize "RQG.NaturalAttacks"}}</div>
-                        <div class="item-controls">
-                            <a class="item-control item-create" title="Create item" data-type="naturalattack"><i class="fas fa-plus"></i></a>
-                        </div>
-                    </li>
-                    {{#each actor.attacks.natural as |attack id|}}
-                        <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
-                            <h4 class="item-name"><a class="naturalattack-roll">{{attack.name}}</a></h4>
-                            <h4 class="item-name">{{attack.data.skillused}}</h4>
-                            <label class="skill-value">{{attack.data.modifier}}</label>
-                            <h4 class="item-name">{{attack.data.damage}}</h4>
-                            <h4 class="item-name">{{attack.data.hpcurrent}} / {{attack.data.hpmax}}</h4>
-                            <div class="item-controls">
-                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                            </div>
-                        </li>
-                    {{/each}}
-                </div>
-            </ol>
+            {{> "systems/runequest/templates/actor/parts/actor-combat.html"}}
         </div>
-
         {{!-- Skills Tab --}}
         <div  class="tab skills"  data-group="primary"  data-tab="skills">
-            <ol class="skills-list">
-                {{#each actor.skills as |skills skillcategory|}}
-                    <div class="skill-category" data-skillcategory="{{skillcategory}}">
-                        <li class="item flexrow item-header">
-                            {{log skillcategory}}
-                            {{log skills}}
-                            <div class="item-name">{{skillcategory}}</div>
-                            <div class="item-name">
-                                <label  class="attribute-value"  type="text"  name="data.skillcategory.{{skillcategory}}.modifier"  value="{{skillcategorymodifier @root.actor.data.skillcategory skillcategory}}"  data-dtype="Number">Modifier: {{skillcategorymodifier @root.actor.data.skillcategory skillcategory}}</label>
-                            </div>
-                            <div class="item-controls">
-                                <a class="item-control item-create" title="Create item" data-type="skill" data-skillcategory="{{skillcategory}}"><i class="fas fa-plus"></i></a>
-                            </div>
-                        </li>
-                        {{#each skills as |item id|}}
-                            <li class="item flexrow" data-item-id="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.skillcategory}}">
-                                <h4 class="item-name"><a class="skill-roll">{{item.name}}</a></h4>
-                                <!--
-                                <label class="skill-value">{{item.data.base}}</label>
-                                <label class="skill-value">{{item.data.increase}}</label>
-                                <label class="skill-value">{{item.data.modifier}}</label>
-                                -->
-                                <a class="skill-roll"><label class="skill-value">{{item.data.total}}</label></a>
-                                <input class="experiencecheck" type="checkbox" name="item.data.experience" {{checked item.data.experience}}/>
-                                <div class="item-controls">
-                                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                                </div>                               
-                            </li>
-                        {{/each}}
-                    </div>
-                {{/each}}
-
-            </ol>
+            {{> "systems/runequest/templates/actor/parts/actor-skills.html"}}
         </div>
 
         {{!-- Biography Tab --}}
@@ -403,11 +265,8 @@
         </div>
         {{!-- Flags Tab --}}
         <div class="tab flags" data-group="primary" data-tab="flags">
-            {{log actor.flags}}
             <ol class="skills-list">
             {{#each actor.flags as |scope scopekey|}}
-                {{log scopekey}}
-                {{log scope}}
                 <div class="skill-category" data-skillcategory="{{skillcategory}}">
                     <li class="item flexrow item-header">
                         <div class="item-name">{{scopekey}}</div>
